examples/datalog/14_aggregations/32_count_zero_groups.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_count_zero
Knowledge graph 'test_count_zero' created.
Switched to knowledge graph: test_count_zero
> .kg use test_count_zero
Switched to knowledge graph: test_count_zero
> +categories[("A",), ("B",), ("C",)].
Inserted 3 fact(s) into 'categories'.
> +items[("A", 1), ("A", 2), ("C", 3)].
Inserted 3 fact(s) into 'items'.
> items_per_cat(Cat, <COUNT:Id>) :- items(Cat, Id).
Script error: Parse error: Unknown aggregate function: 
